Video.250 - Implementar una barra de navegacion

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,8 @@
 <!-- https://developers.themoviedb.org/3/getting-started/introduction -->
 <!-- API Page -->
 <!-- https://www.themoviedb.org/ -->
-<h1>Hola Mundo</h1>
-<router-outlet></router-outlet>
+<!-- NavBar -->
+<app-navbar></app-navbar>
+<div class="container mt-5">
+    <router-outlet></router-outlet>
+</div>
