--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,7 @@
 <p>home works!</p>
+<div class="row" *ngIf="movies.length > 0" >
+    <div class="col">
+        <!-- We need define property "movies" in component "app-slideshow"-->
+        <app-slideshow [movies] = "movies"></app-slideshow>
+    </div>
+</div>
