--- a/src/app/components/slideshow/slideshow.component.html
+++ b/src/app/components/slideshow/slideshow.component.html
@@ -5,7 +5,7 @@
       <!-- Slides -->
       <div class="swiper-slide" *ngFor="let movie of movies" [ngStyle]="{
           'background-size': 'cover',
-          'background-image':'url(https://image.tmdb.org/t/p/w500'+movie.backdrop_path+')'
+          'background-image':'url(https://image.tmdb.org/t/p/w500'+ movie.backdrop_path +')'
         }" >
           <div class="movie-description">
               <h3>{{ movie.title }}</h3>
@@ -17,8 +17,8 @@
     <div class="swiper-pagination"></div>
   
     <!-- If we need navigation buttons -->
-    <div class="swiper-button-prev"></div>
-    <div class="swiper-button-next"></div>
+    <div (click)="onSlidePrev()" class="swiper-button-prev"></div>
+    <div (click)="onSlideNext()" class="swiper-button-next"></div>
   
     <!-- If we need scrollbar -->
     <div class="swiper-scrollbar"></div>
