--- a/src/app/components/peliculas-poster-grid/peliculas-poster-grid.component.html
+++ b/src/app/components/peliculas-poster-grid/peliculas-poster-grid.component.html
@@ -6,7 +6,13 @@
             <h3>{{movie.title}}</h3>
             <div class="row text-white">
                 <div class="col-10">
-                    *******
+                    <!-- Modulo de estrellas obtenido de: https://www.npmjs.com/package/ng-starrating -->
+                    <star-rating    [value]="movie.vote_average" 
+                                    [totalstars]="10" 
+                                    checkedcolor="gold" 
+                                    uncheckedcolor="gray" 
+                                    size="0.875rem" [readonly]="false" 
+                                    (rate)="onRate($event)"></star-rating>
                 </div>
                 <div class="col-2">
                     {{movie.vote_average | number:'1.1-2'}}
