--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,7 +3,7 @@
 <div class="row" *ngIf="movies.length > 0" >
     <div class="col">
         <!-- We need define property "movies" in component "app-slideshow"-->
-        <app-slideshow [movies] = "movies"></app-slideshow>
+        <app-slideshow [movies] = "moviesSlideshow"></app-slideshow>
     </div>
 </div>
 
